error fix: cabin ideas picture size
fixed an error where at around 432px aspect ratio, the cabin image of the Ideas section was too small

--- a/style.css
+++ b/style.css
@@ -421,7 +421,3 @@ footer p {
 html {
   max-width: 99vw;
 }
-
-.tooWide {
-  max-width: 50%;
-}
